...
    android:id="@+id/fragment_chat"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".chat.ChatPage">

    <TextView
        android:id="@+id/emptyTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:padding="16dp"
        android:text="@string/start_chatting"
        android:textAlignment="center"
...
                android:layout_height="24dp"
                android:layout_gravity="center"
                android:background="@android:color/white"
                android:src="@drawable/ic_location_on_24dp" />

            <EditText
                android:id="@+id/messageEdit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:background="@android:color/white"
...
                tools:ignore="UnusedAttribute" />

        </LinearLayout>


        <ImageButton
            android:id="@+id/sendButton"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="end"
            android:src="@drawable/ic_send_24dp" />

...
